maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:-22: error: Unmatched closing brace '}' ignored here
	}
        ^JediEscaper:-21: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^JediEscaper:-17: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^JediEscaper:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^JediEscaper:31: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:32: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:33: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:34: error: Unmatched closing brace '}' ignored here
}
^